Adding styling for result list table-view

--- a/ui/src/main/resources/fxml/resultlist.fxml
+++ b/ui/src/main/resources/fxml/resultlist.fxml
@@ -6,13 +6,12 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
+<VBox stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="resultListTbl" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="580.0">
           <columns>
-              <TableColumn fx:id="fileNameTblCol" prefWidth="460.0" text="File name" />
-              <TableColumn fx:id="fileSizeTblCol" minWidth="0.0" prefWidth="139.0" text="Size" />
+              <TableColumn fx:id="fileNameTblCol" prefWidth="448.0" text="File name" />
+              <TableColumn fx:id="fileSizeTblCol" minWidth="0.0" prefWidth="130.0" text="Size" />
           </columns>
           <columnResizePolicy>
               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
