Some more changes

--- a/ui/src/main/resources/fxml/userDirs.fxml
+++ b/ui/src/main/resources/fxml/userDirs.fxml
@@ -10,7 +10,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <left>
-      <ListView fx:id="foldersList" prefHeight="400.0" prefWidth="406.0" BorderPane.alignment="CENTER">
+      <ListView fx:id="dirsList" prefHeight="400.0" prefWidth="406.0" BorderPane.alignment="CENTER">
          <effect>
             <DropShadow />
          </effect></ListView>
@@ -18,11 +18,11 @@
    <right>
       <VBox prefHeight="400.0" prefWidth="190.0" BorderPane.alignment="CENTER">
          <children>
-            <JFXButton fx:id="addBtn" mnemonicParsing="false" onAction="#addFolder" ripplerFill="#93aaee" text="ADD" textAlignment="CENTER">
+            <JFXButton fx:id="addBtn" mnemonicParsing="false" onAction="#addDir" ripplerFill="#93aaee" text="ADD" textAlignment="CENTER">
                <VBox.margin>
                   <Insets left="50.0" top="20.0" />
                </VBox.margin></JFXButton>
-            <JFXButton fx:id="removeBtn" mnemonicParsing="false" onAction="#removeFolder" ripplerFill="#93aaee" text="REMOVE" textAlignment="CENTER">
+            <JFXButton fx:id="removeBtn" mnemonicParsing="false" onAction="#removeDir" ripplerFill="#93aaee" text="REMOVE" textAlignment="CENTER">
                <VBox.margin>
                   <Insets left="40.0" top="40.0" />
                </VBox.margin>
