Some more changes

--- a/ui/src/main/resources/fxml/shareDirs.fxml
+++ b/ui/src/main/resources/fxml/shareDirs.fxml
@@ -10,7 +10,7 @@
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="600.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXListView fx:id="dirsList" focusTraversable="false" prefHeight="200.0" prefWidth="681.0" showTooltip="true">
+      <JFXListView fx:id="dirsList" focusTraversable="false" prefHeight="180.0" prefWidth="592.0" showTooltip="true">
          <effect>
             <DropShadow color="WHITE" />
          </effect>
@@ -19,12 +19,12 @@
          </HBox.margin></JFXListView>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <JFXButton fx:id="addBtn" alignment="CENTER" layoutX="6.0" layoutY="38.0" mnemonicParsing="false" onAction="#addDir" prefHeight="28.0" prefWidth="43.0" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="addBtn" alignment="CENTER" layoutX="16.0" layoutY="38.0" mnemonicParsing="false" onAction="#addDir" prefWidth="50.0" textAlignment="CENTER" textFill="WHITE">
                <graphic>
                   <FontAwesomeIconView glyphName="PLUS" size="30.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="removeBtn" alignment="CENTER" layoutX="3.0" layoutY="100.0" mnemonicParsing="false" onAction="#removeDir" prefWidth="50.0" textAlignment="CENTER">
+            <JFXButton fx:id="removeBtn" alignment="CENTER" layoutX="15.0" layoutY="100.0" mnemonicParsing="false" onAction="#removeDir" prefWidth="50.0" textAlignment="CENTER">
                <graphic>
                   <FontAwesomeIconView glyphName="MINUS" size="30.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                </graphic>
