--- a/ui/src/main/resources/fxml/shareDirs.fxml
+++ b/ui/src/main/resources/fxml/shareDirs.fxml
@@ -19,14 +19,14 @@
          </HBox.margin></JFXListView>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
-            <JFXButton fx:id="addBtn" alignment="CENTER" layoutX="20.0" layoutY="38.0" mnemonicParsing="false" onAction="#addDir" prefWidth="50.0" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="addBtn" alignment="CENTER" layoutX="20.0" layoutY="38.0" mnemonicParsing="false" onAction="#addDir" prefWidth="50.0" ripplerFill="#1bd79c" textAlignment="CENTER" textFill="WHITE">
                <graphic>
-                  <FontAwesomeIconView glyphName="PLUS" size="30.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="PLUS" size="30.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="removeBtn" alignment="CENTER" layoutX="19.0" layoutY="100.0" mnemonicParsing="false" onAction="#removeDir" prefWidth="50.0" textAlignment="CENTER">
+            <JFXButton fx:id="removeBtn" alignment="CENTER" layoutX="19.0" layoutY="100.0" mnemonicParsing="false" onAction="#removeDir" prefWidth="50.0" ripplerFill="#1bd79c" textAlignment="CENTER">
                <graphic>
-                  <FontAwesomeIconView glyphName="MINUS" size="30.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="MINUS" size="30.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                </graphic>
             </JFXButton>
          </children>
