Also displaying file type and path in result list

--- a/ui/src/main/resources/fxml/resultlist.fxml
+++ b/ui/src/main/resources/fxml/resultlist.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Label?>
 <VBox stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <TableView fx:id="resultListTbl" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="580.0">
@@ -14,8 +14,10 @@
               <Label />
           </placeholder>
           <columns>
-              <TableColumn fx:id="fileNameTblCol" prefWidth="448.0" text="File name" />
-              <TableColumn fx:id="fileSizeTblCol" minWidth="0.0" prefWidth="130.0" text="Size" />
+              <TableColumn fx:id="fileNameTblCol" prefWidth="275.0" text="File" />
+            <TableColumn fx:id="fileTypeTblCol" minWidth="9.0" prefWidth="81.0" text="Type" />
+              <TableColumn fx:id="fileSizeTblCol" minWidth="0.0" prefWidth="83.0" text="Size" />
+            <TableColumn fx:id="filePathTblCol" prefWidth="139.0" text="Path" />
           </columns>
           <columnResizePolicy>
               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
