--- a/ui/src/main/resources/style/style.css
+++ b/ui/src/main/resources/style/style.css
@@ -1,5 +1,4 @@
 .table-view {
-/*    -fx-background-color: #778899;*/
     -fx-border-color: transparent;
 }
 
@@ -12,10 +11,6 @@
     -fx-text-fill: #000000;
 }
 
-.table-view .column-header {
-    /*-fx-background-color: transparent;*/
-}
-
 .table-view .table-cell {
     -fx-text-fill: #0d47a1;
 }
@@ -24,22 +19,9 @@
     -fx-alignment: center;
 }
 
-.table-row-cell {
-    /*-fx-background-color: -fx-table-cell-border-color, #616161;*/
-    -fx-background-insets: 0, 0 0 1 0;
-}
-
-.table-row-cell:odd {
-    /*-fx-background-color: -fx-table-cell-border-color, #424242;*/
-    -fx-background-insets: 0, 0 0 1 0;
-}
-
 .table-row-cell:selected {
-    /*-fx-table-cell-border-color: #f9cb89;*/
-    /*-fx-background-color: #f9cb89 ;*/
-    -fx-background-color: #ede7f6;
-    -fx-table-cell-border-color: #ede7f6;
-    -fx-text-fill: #FFFFFF;
+    -fx-background-color: #78bba1;
+    -fx-table-cell-border-color: #78bba1;
 }
 
 .table-row-cell:empty {
@@ -83,7 +65,7 @@
 }
 
 .progress-bar .bar {
-    -fx-background-color: #1bd79c;
+    -fx-background-color: #2196F3;
     -fx-background-insets: 0, 1, 2;
     -fx-padding: 0.4em;
 }
