--- a/ui/src/main/resources/fxml/downloadResult.fxml
+++ b/ui/src/main/resources/fxml/downloadResult.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="downloadResultTbl" stylesheets="@../style/style.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+      <TableView fx:id="downloadResultTbl" layoutY="9.0" stylesheets="@../style/style.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
           <placeholder>
               <Label />
           </placeholder>
