--- a/ui/src/main/resources/fxml/resultlist.fxml
+++ b/ui/src/main/resources/fxml/resultlist.fxml
@@ -1,29 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView fx:id="resultListTbl" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="580.0">
+      <TableView fx:id="resultListTbl" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
           <placeholder>
               <Label />
           </placeholder>
           <columns>
-              <TableColumn fx:id="fileNameTblCol" prefWidth="275.0" text="File" />
-            <TableColumn fx:id="fileTypeTblCol" minWidth="9.0" prefWidth="81.0" text="Type" />
-              <TableColumn fx:id="fileSizeTblCol" minWidth="0.0" prefWidth="83.0" text="Size" />
-            <TableColumn fx:id="filePathTblCol" prefWidth="139.0" text="Path" />
+              <TableColumn fx:id="fileNameTblCol" text="File" />
+            <TableColumn fx:id="fileTypeTblCol" minWidth="9.0" text="Type" />
+              <TableColumn fx:id="fileSizeTblCol" minWidth="0.0" text="Size" />
+            <TableColumn fx:id="filePathTblCol" text="Path" />
           </columns>
-          <columnResizePolicy>
-              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-          </columnResizePolicy>
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
       </TableView>
    </children>
-</VBox>
+</AnchorPane>
