--- a/ui/src/main/resources/fxml/filesearch.fxml
+++ b/ui/src/main/resources/fxml/filesearch.fxml
@@ -4,14 +4,19 @@
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="40.0" prefWidth="600.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="parentCtnr" prefHeight="40.0" prefWidth="600.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXTextField fx:id="searchBox" focusColor="#97c7f5" layoutX="15.0" layoutY="1.0" prefHeight="34.0" prefWidth="533.0" promptText="Search..." unFocusColor="#585a5a" />
-      <JFXButton fx:id="searchBtn" layoutX="548.0" mnemonicParsing="false" onAction="#search" prefHeight="41.0" prefWidth="52.0" ripplerFill="WHITE" style="-fx-background-color: transparent;">
-         <graphic>
-            <FontAwesomeIconView glyphName="SEARCH" size="20.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="10.0" />
-         </graphic>
-      </JFXButton>
+      <HBox fx:id="hboxCtnr" alignment="CENTER_LEFT" layoutX="15.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="3.0">
+         <children>
+            <JFXTextField fx:id="searchBox" focusColor="#97c7f5" prefHeight="34.0" prefWidth="533.0" promptText="Search..." unFocusColor="#585a5a" />
+            <JFXButton fx:id="searchBtn" mnemonicParsing="false" onAction="#search" prefHeight="41.0" prefWidth="52.0" ripplerFill="WHITE" style="-fx-background-color: transparent;">
+               <graphic>
+                  <FontAwesomeIconView glyphName="SEARCH" size="20.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="10.0" />
+               </graphic>
+            </JFXButton>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
