Some CSS changes in start scene

--- a/ui/src/main/resources/style/style.css
+++ b/ui/src/main/resources/style/style.css
@@ -1,5 +1,5 @@
 .table-view {
-    -fx-effect: dropshadow(three-pass-box, #000000, 10, 0, 0, 0);
+    -fx-focus-traversable: false;
 }
 
 .table-view:focused {
