Displaying output file path in downloads table view

--- a/ui/src/main/resources/fxml/downloadResult.fxml
+++ b/ui/src/main/resources/fxml/downloadResult.fxml
@@ -17,6 +17,7 @@
             <TableColumn fx:id="progressTblCol" text="Progress" />
             <TableColumn fx:id="sizeTblCol" text="Size" />
             <TableColumn fx:id="typeTblCol" text="Type" />
+            <TableColumn fx:id="pathTblCol" text="Path" />
         </columns>
       </TableView>
    </children>
