--- a/ui/src/main/resources/fxml/shareDirs.fxml
+++ b/ui/src/main/resources/fxml/shareDirs.fxml
@@ -3,36 +3,29 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="600.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="200.0" prefWidth="650.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXListView fx:id="dirsList" focusTraversable="false" prefHeight="180.0" prefWidth="592.0" showTooltip="true">
+      <JFXListView fx:id="dirsList" focusTraversable="false" layoutX="39.0" layoutY="28.0" prefHeight="166.0" prefWidth="489.0" showTooltip="true" AnchorPane.bottomAnchor="26.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="171.0" AnchorPane.topAnchor="28.0">
          <effect>
             <InnerShadow color="#a19e9e" />
          </effect>
-         <HBox.margin>
-            <Insets bottom="10.0" left="30.0" top="10.0" />
-         </HBox.margin></JFXListView>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+      </JFXListView>
+      <AnchorPane layoutX="540.0" layoutY="86.0" prefHeight="80.0" prefWidth="47.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="540.0" AnchorPane.rightAnchor="113.0" AnchorPane.topAnchor="86.0">
          <children>
-            <JFXButton fx:id="addBtn" alignment="CENTER" layoutX="25.0" layoutY="46.0" mnemonicParsing="false" onAction="#addDir" prefHeight="20.0" prefWidth="20.0" ripplerFill="#1bd79c" textAlignment="CENTER" textFill="WHITE">
+            <JFXButton fx:id="addBtn" alignment="CENTER" mnemonicParsing="false" onAction="#addDir" prefHeight="20.0" prefWidth="20.0" ripplerFill="#1bd79c" textAlignment="CENTER" textFill="WHITE">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="PLUS" size="15.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                </graphic>
             </JFXButton>
-            <JFXButton fx:id="removeBtn" alignment="CENTER" layoutX="24.0" layoutY="105.0" mnemonicParsing="false" onAction="#removeDir" prefHeight="20.0" prefWidth="20.0" ripplerFill="#1bd79c" textAlignment="CENTER">
+            <JFXButton fx:id="removeBtn" alignment="CENTER" layoutY="53.0" mnemonicParsing="false" onAction="#removeDir" prefHeight="20.0" prefWidth="20.0" ripplerFill="#1bd79c" textAlignment="CENTER">
                <graphic>
                   <FontAwesomeIconView fill="WHITE" glyphName="MINUS" size="15.0" strokeType="OUTSIDE" strokeWidth="0.0" />
                </graphic>
             </JFXButton>
          </children>
-         <HBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </HBox.margin>
       </AnchorPane>
    </children>
-</HBox>
+</AnchorPane>
