--- a/ui/src/main/resources/fxml/submitButtons.fxml
+++ b/ui/src/main/resources/fxml/submitButtons.fxml
@@ -8,14 +8,14 @@
 
 <AnchorPane prefHeight="50.0" prefWidth="600.0" stylesheets="@../style/style.css" xmlns="http://javafx.com/javafx/8.0.999-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <JFXButton fx:id="okBtn" buttonType="RAISED" defaultButton="true" layoutX="109.0" layoutY="9.0" mnemonicParsing="false" onAction="#ok" prefHeight="35.0" prefWidth="106.0" ripplerFill="#1bd79c" styleClass="okBtn" text="OK" textAlignment="CENTER" AnchorPane.topAnchor="9.0">
+      <JFXButton fx:id="okBtn" buttonType="RAISED" defaultButton="true" layoutX="109.0" layoutY="9.0" mnemonicParsing="false" onAction="#ok" prefHeight="35.0" prefWidth="106.0" ripplerFill="#1bd79c" styleClass="okBtn" text="OK" textAlignment="CENTER" AnchorPane.topAnchor="4.0">
          <font>
             <Font size="15.0" />
          </font>
          <effect>
             <DropShadow />
          </effect></JFXButton>
-      <JFXButton fx:id="cancelBtn" buttonType="RAISED" cancelButton="true" layoutX="396.0" layoutY="9.0" mnemonicParsing="false" onAction="#cancel" prefHeight="35.0" prefWidth="106.0" ripplerFill="#1bd79c" styleClass="cancelBtn" text="Cancel" textAlignment="CENTER">
+      <JFXButton fx:id="cancelBtn" buttonType="RAISED" cancelButton="true" layoutX="396.0" layoutY="9.0" mnemonicParsing="false" onAction="#cancel" prefHeight="35.0" prefWidth="106.0" ripplerFill="#1bd79c" styleClass="cancelBtn" text="Cancel" textAlignment="CENTER" AnchorPane.topAnchor="4.0">
          <font>
             <Font size="15.0" />
          </font>
